# hed-rag

./: README.md  main.py  pyproject.toml  requirements.txt
src/config/: config.py  model_config.py
src/models/: chat_models.py
src/pipelines/: ingestion_pipeline.py  retrieval_pipeline.py
src/routers/: chat_router.py
src/services/: retrieve_service.py  upload_service.py
src/utils/exceptions/: custom_app_exception.py
