[project]
name = "hed-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-aws>=1.4.5",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "langchain-neo4j>=0.9.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.28",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
]
